--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">AstralJourney</string>
-    <string name="horoscope_bottom_title">horoscope</string>
+    <string name="horoscope_bottom_title">Horoscope</string>
     <string name="luck_bottom_title">Luck</string>
     <string name="palmstry_bottom_title">Palmstry</string>
+    <string name="app_toolbar_title">AstralJourney</string>
 </resources>
