fixed bugs,masterdetail flow ended

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -4,7 +4,7 @@
     <string name="horoscope_bottom_title">Horoscope</string>
     <string name="luck_bottom_title">Luck</string>
     <string name="palmstry_bottom_title">Palmstry</string>
-    <string name="app_toolbar_title">AstralJourney</string>
+    <string name="app_toolbar_title">ASTRAL JOURNEY</string>
     <string name="aries_zodiac_name">Aries</string>
     <string name="taurus_zodiac_name">Taurus</string>
     <string name="gemini_zodiac_name">Gemini</string>
