animations and luck

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -17,4 +17,5 @@
     <string name="capricorn_zodiac_name">Capricorn</string>
     <string name="aquarius_zodiac_name">Aquarius</string>
     <string name="pisces_zodiac_name">Pisces</string>
+    <string name="share">Share</string>
 </resources>
